fixing overlapping

--- a/src/app/components/delete-room/delete-room.component.css
+++ b/src/app/components/delete-room/delete-room.component.css
@@ -1,3 +1,10 @@
-.room {
+Copy.room {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.room button {
   min-width: 300px;
+  margin-top: auto;
 }
